--- a/agent.yaml
+++ b/agent.yaml
@@ -37,7 +37,9 @@ github-copilot:
 
 # Gemini settings (Google AI)
 gemini:
-  model: gemini-2.5-pro  # Options: gemini-2.5-pro, gemini-2.5-flash, gemini-2.0-flash
-  # Gemini CLI uses 'gemini' command from @anthropic/gemini-cli or similar
+  model: gemini-3-pro  # Options: gemini-3-pro, gemini-3-flash, gemini-2.5-pro, gemini-2.5-flash
+  # approval-mode: auto (default), yolo (auto-approve all tools), default (prompt for approval)
+  approval-mode: auto
+  # Gemini CLI uses 'gemini' command (npm install -g @anthropic/gemini-cli)
   # Additional CLI flags (optional)
   # flags: ""
